# InvPyplot

./: .gitignore  README.md  Res2DInvPlot_orig.ipynb  __init__.py  invplot.py  master_notebook.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: InvPyplot.rst  Readme.md  conf.py  generate_docs_pdoc.py  index.html  index.rst  invplot.html  modules.rst  requirements.txt
docs/_build/doctrees/: InvPyplot.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  InvPyplot.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html  invplot.html
docs/_build/html/_sources/: InvPyplot.rst.txt
