[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'InvPyplot'
version="1.0"
description = "Python package enabling plotting of .inv files exported from Res2DInv in matplotlib"
authors = 'Riley Balikian'
license = { text = "MIT" }
requires-python = ">=3.0"
dependencies =  ["numpy", "pandas", "matplotlib", "scipy"]
